--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <link rel="icon" href="https://blog.1l1.icu/images/avatar@round.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Muska Ami DN42 Looking Glass</title>
+  <title>Muska Network DN42 Looking Glass</title>
 </head>
 
 <body>
