--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="https://blog.1l1.icu/images/avatar@round.png">
+  <link rel="icon" href="https://muska.zip/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Muska Network DN42 Looking Glass</title>
 </head>
